<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/main_menu_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/main_menu_backgroung_description"
        android:src="@drawable/menu_background" />
    
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical"
	    android:gravity="bottom">
	    
	   
	    <Button
	        android:id="@+id/sensor_button"
	        android:text="@string/sensor_button_laberl"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:layout_gravity="center_horizontal"/>
	
   	    <Button
	        android:id="@+id/start_edge_detection_button"
	        android:text="@string/start_edge_detection_button_label"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:layout_gravity="center_horizontal"/>
	    	    
	    <Button
	        android:id="@+id/start_button"
	        android:text="@string/start_button_label"
	        android:layout_height="wrap_content"
	        android:layout_width="60pt"
	        android:layout_gravity="center_horizontal"/>
	    
	    <Button
	        android:id="@+id/settings_button"
	        android:text="@string/settings_button_label"
	        android:layout_height="wrap_content"
	        android:layout_width="60pt"
	        android:layout_gravity="center_horizontal"/>

	    <Button
	        android:id="@+id/import_button"
	        android:layout_width="60pt"
	        android:layout_height="wrap_content"
	        android:text="@string/import_button_label"
	        android:layout_gravity="center_horizontal"/>
	    
	    <Button
	        android:id="@+id/help_button"
	        android:text="@string/help_button_label"
	        android:layout_height="wrap_content"
	        android:layout_width="60pt"
	        android:layout_gravity="center_horizontal"/>
	
	</LinearLayout>
	
</FrameLayout>
